# srn-export

./: .editorconfig  .gitignore  package.json
srn/: .eslintrc  .versionrc.js  CHANGELOG.md  README.md  TROUBLESHOOTING.md  babel.config.js  package-2.json  package.json
srn/avro-genschema/: Cargo.toml
srn/avro-genschema/src/: main.rs
srn/client/: .dockerignore  .gitignore  Dockerfile  jestTestEnvironment.js  package.json  setupTests.js  tsconfig.json  version.json
srn/client/.storybook/: main.js  manager.js  webpack.config.js
srn/client/config/: WEBPACK.md  modules.js  paths.js  webpack.config.js
srn/client/config.bak/: webpack.config.js  webpackDevServer.config.bak.js
srn/client/docker/: default.conf
srn/client/public/: index.html
srn/client/scripts/: build.js  jestResolve.js  start.js
srn/client/scripts.bak/: start.js
srn/client/src/: App.tsx  BodiesLayer.tsx  CanvasHudLayer.tsx  ChatState.ts  ClientStateIndexing.ts  CoordLayer.tsx  DebugState.tsx  DebugStateLayer.tsx  GameHTMLHudLayer.tsx  HotkeyWrapper.tsx  LeaderboardLayer.tsx  MusicControls.tsx  NamesLayer.tsx  NetState.ts  NetStateHooks.ts  NetStateToStorePusher.tsx  Perf.tsx  PlanetShape.tsx  PlanetsLayer.tsx  ReplayControlsSrnContainer.tsx  ShipControls.tsx  ShipShape.tsx  ShipsLayer.tsx  Srn.tsx  StartMenuBackground.tsx  StateStoreSyncer.tsx  StateSyncer.ts  Times.ts  common.ts  compare.ts  coord-realToScreen.spec.ts  coord-screenToReal.spec.ts  coord.spec.ts  coord.ts  coordHooks.ts  deepKeyOf.ts  index.css  index.scss  index.tsx  sizeof.ts  (+2 more)
srn/client/src/HtmlLayers/: ActionsBar.scss  ActionsBar.stories.tsx  ActionsBar.tsx  CameraCoordinatesBox.scss  CameraCoordinatesBox.tsx  Changelog.scss  Changelog.tsx  Chat.scss  Chat.tsx  ChatWindow.scss  ChatWindow.tsx  ControlPanel.scss  ControlPanel.tsx  (+75 more)
srn/codeshift/: helpers.ts  make-builder-classes.ts  make-smart-enums.ts  package.json  reverse-identifiers.js
srn/codeshift/__testfixtures__/: advanced-union.input.ts  advanced-union.output.ts  builder-classes-main.output.ts  simple-union.input.ts  simple-union.output.ts  temp.ts
srn/codeshift/__tests__/: make-builder-classes.js  make-smart-enums.test.js
srn/design/: asteroid.blend  asteroid.blend1  ui.xcf
srn/design/container/: container.glb
srn/resources/: ship.stl
srn/scripts/: builder-env.js  deploy.js  dialogueResources.template  formula-to-rust.js  git.js  regen-resources.js  shellspawn.js  start-server.js  up-version.js  wasm-build.js
srn/server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Rocket.toml
srn/server/resources/avro_schemas/: 0001-Vec2f64.json  0002-SpatialProps.json  0003-PlanetV2.json  01-01-Ability.json  01-01-GameMode.json  01-02-AiTrait.json  01-03-CORS.json  01-03-LocationLink.json  01-04-CargoDeliveryQuestState.json  01-04-DialogueId.json  01-05-ChatMessage.json  01-06-ClientErr.json  01-06-FriendOrFoe.json  01-07-ClientMarker.json  01-07-Rarity.json  01-08-ClientOpCode.json  01-08-GameOver.json  01-08-RotationMovement.json  01-09-ClientPing.json  01-09-GenStateOpts.json  01-10-ConsumeOptions.json  01-11-DialogueOptionSideEffect.json  01-12-DialogueRequest.json  01-13-DialogueUpdate.json  01-16-NotificationActionR.json  01-18-IMovableType.json  01-18-ObjectProperty.json  01-19-InventoryAction.json  01-20-InventoryItemType.json  01-20-OptionId.json  01-21-LocationChangePayload.json  01-22-PlayerId.json  01-23-LongActionPlayer.json  01-24-MoveAxisParam.json  01-26-ObjectIndexSpecifier.json  01-26-ReferencableIdStorage.json  01-27-RoomId.json  01-28-ObjectSpecifier.json  01-29-PersonalizeUpdate.json  01-30-PingInstance.json  (+129 more)
srn/server/resources/dialogue_scripts/: basic_planet.json  cargo_delivery_dropoff.json  cargo_delivery_pickup.json  d_template.json  tutorial_camera.json  tutorial_end.json  tutorial_movement.json  tutorial_quests.json  tutorial_start.json
srn/server/resources/replays/: 00000001-c0fa-4603-85b2-d895efe3bf16.json  00000002-c0fa-4603-85b2-d895efe3bf16.json  0d61ec76-a6d3-425e-9cb6-52d7abb2ad4b.json  1d77acc4-fea3-4044-ace7-1af7492c91fd.json  4185b7ac-0d09-4b6f-8388-81fc847e7535.json  49590455-959a-4206-8c77-bf0c69d40f59.json  4c5ce765-4588-4deb-b5cf-7720cfd31c80.json  4e1b10b5-d08f-4f1f-922f-41918c654514.json  4f26e8c6-7d6e-49cb-91a2-3f3ffc2a02f8.json  65790125-9900-4cae-8b1e-57aabac018f2.json  928451ed-b866-47b3-99bf-6476df22b77d.json  99bf1df9-7582-4238-ad4b-d13154b0559e.json  d3c3786f-14c0-46aa-9ca2-58456faab707.json  ec2c218e-0313-47c1-b731-cd886d2e1cfc.json
srn/server/resources/saved_states/: nothing special.json  perf_basis.json  tractor_test.json  trade_debug.json
srn/server/src/: 1.json  abilities.rs  api.rs  api_struct.rs  autofocus.rs  autofocus_test.rs  avro.rs  bots.rs  cargo_rush.rs  cast.rs  chat.rs  combat.rs  dialogue.rs  dialogue_dto.rs  dialogue_test.rs  effects.rs  events.rs  fof.rs  game.rs  hp.rs  indexing.rs  interpolation.rs  inventory.rs  inventory_test.rs  locations.rs  long_actions.rs  macros.rs  main.rs  main_ws_server.rs  market.rs  net.rs  notifications.rs  perf.rs  pirate_defence.rs  planet_movement.rs  planet_movement_test.rs  properties.rs  random_stuff.rs  replay.rs  replays_api.rs  (+25 more)
srn/server/src/dialogue_scripts/: cargo_delivery_pickup.json
srn/server/src/properties/: decay.rs  mod.rs  properties_main.rs
srn/tests/: babelJestTransform.js  jest.config.js  jestResolve.js  jestTestEnvironment.js  package.json  perf.js  setupTests.js  util.js
srn/tests/cargoRush/: bots.spec.js
srn/tests/combat/: projectiles.spec.js
srn/tests/common/: autofocus.spec.js  determinism.spec.js  events.spec.js  health.spec.js  incrementalUpdate.spec.js  interpolation.spec.js  planetMovement.spec.js  playerActions.spec.js  replays.spec.js  respawn.spec.js  trajectory.spec.js
srn/tests/events/: events.spec.js
srn/tests/perf/: serialization-benchmark.spec.js
srn/tests/pirateDefence/: bots.spec.js  fof.spec.js
srn/tests/smoke/: sample-smoke.spec.js
srn/tests/sync/: StateSyncer.spec.js  StateSyncer.ts
srn/world/: .gitignore  Cargo.toml
srn/world/.cargo/: config.toml
srn/world/src/: interface.rs  lib.rs
(+193 files in other folders)
