[package]
name = "avro-genschema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.2.2"

[dependencies.syn]
version = "1.0.105"
features = ["full", "extra-traits", "visit"]

[dependencies.clap]
version = "4.0.29"
features = ["cargo"]

