[package]
name = "avro-genschema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.2.2"
avro-schema = { version = "0.3.0", features = ["full"] }
serde = "1.0.152"
serde_json = "1.0.91"

[dependencies.syn]
version = "1.0.105"
features = ["full", "extra-traits", "visit"]

[dependencies.clap]
version = "4.0.29"
features = ["cargo"]

