[package]
name = "srn-server"
version = "0.1.0"
authors = ["Valeriy Kuzmin <malcoriel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
lazy_static = "1.4.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev"}
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
websocket = "0.26.2"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
