[package]
name = "srn-server"
version = "0.6.15"
authors = [ "Valeriy Kuzmin <malcoriel@gmail.com>" ]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [ "-Oz", "--enable-mutable-globals" ]

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
lazy_static = "1.4.0"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
websocket = "0.26.2"
chrono = "0.4.19"
itertools = "0.10.0"
regex = "1.4.2"
crossbeam = "0.8.0"
pkg-version = "1.0.0"
objekt-clonable = "0.2.2"
statrs = "0.13.0"
statistical = "1.0.0"
hex = "0.4.2"
strum = "0.20.0"
strum_macros = "0.20.1"
typescript-definitions = "0.1.10"
wasm-bindgen = "0.2.71"
kdbush = "0.2.0"

  [dependencies.rocket]
  git = "https://github.com/SergioBenitez/Rocket"
  branch = "master"

  [dependencies.rocket_contrib]
  git = "https://github.com/SergioBenitez/Rocket"
  branch = "master"

  [dependencies.uuid]
  version = "0.8.1"
  features = [ "serde", "v4" ]

  [dependencies.rand]
  version = "0.6.5"
  features = [ "wasm-bindgen" ]
