[package]
name = "srn-server"
version = "0.9.19"
authors = [ "Valeriy Kuzmin <malcoriel@gmail.com>" ]
edition = "2018"
rust-version = "1.67"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [ "-Oz", "--enable-mutable-globals" ]

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
lazy_static = "1.4.0"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
websocket = "0.26.2"
chrono = "0.4.19"
itertools = "0.10.0"
regex = "1.4.2"
crossbeam = "0.8.0"
pkg-version = "1.0.0"
objekt-clonable = "0.2.2"
statrs = "0.13.0"
statistical = "1.0.0"
hex = "0.4.2"
strum_macros = "0.20.1"
typescript-definitions = "0.1.10"
serde-wasm-bindgen = "0.3.1"
wasm-bindgen = "0.2.83"
kdbush = "0.2.0"
state = "0.5.2"
lockfree = "0.5.1"
mut_static = "5.0.0"
json-patch = "0.2.4"
rand_pcg = "0.1.2"
serde_path_to_error = "0.1"
console = "0.15.2"
serde_json_any_key = "2.0.0"
include_dir = "0.7.3"
serde_with = "1.14.0"
ctrlc = "3.4.0"

  [dependencies.optimization_engine]
  version = "0.7.7"
  features = [ "wasm" ]

  [dependencies.strum]
  version = "0.20.0"
  features = [ "derive" ]

  [dependencies.treediff]
  version = "4.0.2"
  features = [ "with-serde-json" ]

  [dependencies.rocket]
  git = "https://github.com/SergioBenitez/Rocket"
  rev = "c24f15c18f02319be83af4f3c1951dc220b52c5e"

  [dependencies.rocket_contrib]
  git = "https://github.com/SergioBenitez/Rocket"
  rev = "c24f15c18f02319be83af4f3c1951dc220b52c5e"

  [dependencies.uuid]
  version = "0.8.1"
  features = [ "serde", "v4" ]

  [dependencies.rand]
  version = "0.6.5"
  features = [ "wasm-bindgen" ]
