[package]
name = "world"
version = "0.8.5"
authors = [ "Valeriy Kuzmin <malcoriel@gmail.com>" ]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [ "-Oz", "--enable-mutable-globals" ]

[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
default = [ "console_error_panic_hook" ]

[dependencies]
lazy_static = "1.4.0"
wasm-bindgen = "0.2.71"
serde = "1.0.118"
serde_json = "1.0.60"
serde_derive = "1.0.118"
itertools = "0.10.0"
regex = "1.4.2"
crossbeam = "0.8.0"
objekt-clonable = "0.2.2"
statistical = "1.0.0"
hex = "0.4.2"
strum_macros = "0.20.1"
strum = "0.20.0"
kdbush = "0.2.0"
mut_static = "5.0.0"
bytemuck = "1.7.3"
serde-wasm-bindgen = "0.3.1"
json-patch = "0.2.4"
rand_pcg = "0.1.2"

  [dependencies.treediff]
  version = "4.0.2"
  features = [ "with-serde-json" ]

  [dependencies.typescript-definitions]
  version = "0.1.10"
  features = [ "type-guards" ]

  [dependencies.uuid]
  version = "0.8.1"
  features = [ "serde", "wasm-bindgen" ]

  [dependencies.console_error_panic_hook]
  version = "0.1.6"
  optional = true

  [dependencies.wee_alloc]
  version = "0.4.5"
  optional = true

  [dependencies.rand]
  version = "0.6.5"
  features = [ "wasm-bindgen" ]

  [dependencies.chrono]
  version = "0.4.19"
  features = [ "wasmbind" ]

  [dependencies.getrandom]
  version = "0.2.2"
  features = [ "js" ]

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.71"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
